Checkin for backup purposes.  Looks like data is being received.

--- a/app/src/main/res/layout/activity_data_collection.xml
+++ b/app/src/main/res/layout/activity_data_collection.xml
@@ -7,4 +7,12 @@
     android:layout_height="match_parent"
     tools:context="com.sigenix.indicor.DataCollectionActivity">
 
+    <EditText
+        android:id="@+id/statusText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        tools:layout_editor_absoluteX="71dp"
+        tools:layout_editor_absoluteY="78dp"/>
 </android.support.constraint.ConstraintLayout>
