--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="colorLightGray">#D3D3D3</color>
+    <color name="colorTopBar">#58595b</color>
+    <color name="colorBottomBar">#33A6D4</color>
+    <color name="colorTitleBar">#61C1D2</color>
 </resources>
