--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,5 +4,7 @@
     <dimen name="patient_entry_row_margin">10dp</dimen>
     <dimen name="procedure_step_font_size">16dp</dimen>
     <dimen name="procedure_steps_font_size">14dp</dimen>
-
+    <dimen name="main_screen_icon_size">50dp</dimen>
+    <dimen name="main_screen_label_size">24sp</dimen>
+    <dimen name="main_screen_vertical_spacing">20dp</dimen>
 </resources>
