Working checkin for backup purposes.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,7 @@
                 android:layout_width="@dimen/main_screen_icon_size"
                 android:layout_height="@dimen/main_screen_icon_size"
                 android:background="@null"
+                android:onClick="onImageStartClick"
                 android:scaleType="fitXY"
                 android:src="@drawable/start_button"
                 android:visibility="visible"/>
