--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#ff4081</color>
     <color name="colorLightGray">#D3D3D3</color>
     <color name="colorTopBar">#58595b</color>
-    <color name="colorBottomBar">#33A6D4</color>
+    <color name="colorBottomBar">#33a6d4</color>
     <color name="colorTitleBar">#61C1D2</color>
 </resources>
