--- a/app/src/main/res/layout/activity_pat_info.xml
+++ b/app/src/main/res/layout/activity_pat_info.xml
@@ -10,15 +10,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:background="@color/colorTopBar"
 
         android:orientation="horizontal">
 
         <ImageButton
             android:id="@+id/imageButton"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="20dp"
             android:background="@null"
@@ -41,8 +41,8 @@
 
         <ImageButton
             android:id="@+id/imageButton5"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="20dp"
             android:background="@null"
@@ -61,8 +61,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:orientation="vertical">
 
             <ImageView
@@ -75,14 +76,16 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/patientIDGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/patIDLabel"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
@@ -115,11 +118,11 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/DOBGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                >
+                android:orientation="horizontal">
 
 
                 <TextView
@@ -138,8 +141,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_weight="6"
-                    android:cursorVisible="false"
                     android:background="@null"
+                    android:cursorVisible="false"
                     android:inputType="textPersonName"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
@@ -156,7 +159,7 @@
                     android:id="@+id/textView22"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="4"
+                    android:layout_weight="6"
                     android:fontFamily="fonts/Roboto-Light.ttf"
                     android:paddingStart="10dp"
                     android:textSize="@dimen/main_screen_label_size"/>
@@ -165,14 +168,14 @@
                     android:id="@+id/npDOBMonth"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <NumberPicker
                     android:id="@+id/npDOBDay"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <NumberPicker
@@ -186,7 +189,7 @@
                     android:id="@+id/textView222"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
+                    android:layout_weight="4"
                     android:fontFamily="fonts/Roboto-Light.ttf"
                     android:textSize="@dimen/main_screen_label_size"/>
 
@@ -202,6 +205,7 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/heightGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -225,8 +229,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_weight="4"
-                    android:cursorVisible="false"
                     android:background="@null"
+                    android:cursorVisible="false"
                     android:inputType="textPersonName"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
@@ -258,21 +262,21 @@
                     android:id="@+id/npFeet"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <NumberPicker
                     android:id="@+id/npInches"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="2"
+                    android:layout_weight="1"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <TextView
                     android:id="@+id/textView27"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="5"/>
             </LinearLayout>
 
 
@@ -286,6 +290,7 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/weightGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -309,8 +314,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_weight="4"
-                    android:cursorVisible="false"
                     android:background="@null"
+                    android:cursorVisible="false"
                     android:inputType="textPersonName"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
@@ -343,14 +348,14 @@
                     android:id="@+id/npWeight"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_weight="1"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <TextView
                     android:id="@+id/textView322"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="6"/>
             </LinearLayout>
 
 
@@ -364,6 +369,7 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/systolicGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -387,8 +393,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_weight="4"
-                    android:cursorVisible="false"
                     android:background="@null"
+                    android:cursorVisible="false"
                     android:inputType="textPersonName"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
@@ -421,14 +427,14 @@
                     android:id="@+id/npSystolic"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_weight="1"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <TextView
                     android:id="@+id/textView352"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="6"/>
             </LinearLayout>
 
 
@@ -442,6 +448,7 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/diastolicGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -465,8 +472,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_weight="4"
-                    android:cursorVisible="false"
                     android:background="@null"
+                    android:cursorVisible="false"
                     android:inputType="textPersonName"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
@@ -499,14 +506,14 @@
                     android:id="@+id/npDiastolic"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_weight="1"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <TextView
                     android:id="@+id/textView132"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="6"/>
             </LinearLayout>
 
 
@@ -520,6 +527,7 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/genderGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -543,8 +551,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_weight="6"
-                    android:cursorVisible="false"
                     android:background="@null"
+                    android:cursorVisible="false"
                     android:inputType="textPersonName"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
@@ -567,14 +575,14 @@
                     android:id="@+id/npGender"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="4"
+                    android:layout_weight="2"
                     android:theme="@style/PatInfoNumberPicker"/>
 
                 <TextView
                     android:id="@+id/textView326"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="5"/>
             </LinearLayout>
 
 
@@ -588,6 +596,7 @@
                 android:src="@drawable/divider_line"/>
 
             <LinearLayout
+                android:id="@+id/notesGroup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
@@ -612,7 +621,8 @@
                     android:layout_gravity="left"
                     android:layout_weight="6"
                     android:background="@null"
-                    android:inputType="textPersonName"
+                    android:gravity="top|left"
+                    android:inputType="text|textMultiLine"
                     android:textAppearance="@style/PatInfoValue"
                     android:textColor="@null"/>
                 />
