--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,36 @@
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <LinearLayout
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="40dp"
         android:background="@color/colorTopBar"
-        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_centerInParent="true"
+            android:layout_centerVertical="true"
             android:fontFamily="fonts/Roboto-Medium.ttf"
             android:text="@string/co_name"
             android:textColor="@android:color/background_light"
             android:textSize="24sp"/>
-    </LinearLayout>
+
+        <ImageButton
+            android:id="@+id/exitButton"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:layout_marginEnd="10dp"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/exit_app"/>
+
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
