--- a/app/src/main/res/layout/activity_pat_info.xml
+++ b/app/src/main/res/layout/activity_pat_info.xml
@@ -643,14 +643,13 @@
         android:paddingTop="15dp">
 
         <TextView
-            android:id="@+id/textViewVersion"
+            android:id="@+id/txtMessage"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_weight="5"
             android:fontFamily="fonts/Roboto-Light.ttf"
             android:gravity="center_horizontal"
-            android:text="@string/connect_dev"
             android:textColor="@android:color/background_light"
             android:textSize="@dimen/bottom_bar_font_size"/>
 
@@ -665,11 +664,11 @@
             android:src="@drawable/training_button"/>
 
         <ImageButton
-            android:id="@+id/imageButton6"
+            android:id="@+id/startTestButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:alpha=".5"
+            android:alpha="1"
             android:background="@null"
             android:scaleType="fitCenter"
             android:src="@drawable/next_button"/>
