--- a/app/src/main/res/layout/activity_pat_info.xml
+++ b/app/src/main/res/layout/activity_pat_info.xml
@@ -654,7 +654,7 @@
             android:textSize="@dimen/bottom_bar_font_size"/>
 
         <ImageButton
-            android:id="@+id/imageButton7"
+            android:id="@+id/practiceButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
