--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.widget.LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:foregroundGravity="bottom"
@@ -9,57 +8,40 @@
     android:orientation="vertical">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorTopBar"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_centerVertical="true"
-            android:fontFamily="fonts/Roboto-Medium.ttf"
-            android:text="@string/co_name"
-            android:textColor="@android:color/background_light"
-            android:textSize="24sp"/>
-
-        <ImageButton
-            android:id="@+id/exitButton"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="10dp"
-            android:background="@null"
-            android:scaleType="fitCenter"
-            android:src="@drawable/exit_app"/>
-
-    </RelativeLayout>
+    <include
+        android:id="@+id/topBar"
+        layout="@layout/top_bar_layout"
+        android:layout_alignParentTop="true"/>
 
     <LinearLayout
+        android:id="@+id/mainScreenTitleBar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:layout_below="@+id/topBar"
         android:background="@color/colorTitleBar"
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView55"
+            android:id="@+id/tagLineLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:fontFamily="fonts/Roboto-Medium.ttf"
+            android:fontFamily="@font/roboto_light"
             android:text="@string/tag_line"
             android:textColor="@android:color/background_light"
             android:textSize="24sp"/>
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/buttonsGroup"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignTop="@+id/mainScreenTitleBar"
+        android:layout_below="@+id/mainScreenTitleBar"
+        android:layout_centerHorizontal="false"
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="false"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical">
@@ -82,10 +64,10 @@
                 android:visibility="visible"/>
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/startTestLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="fonts/Roboto-Light.ttf"
+                android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/starttest"
                 android:textSize="@dimen/main_screen_label_size"/>
@@ -118,10 +100,10 @@
                 android:visibility="visible"/>
 
             <TextView
-                android:id="@+id/textView56"
+                android:id="@+id/settingsLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="fonts/Roboto-Light.ttf"
+                android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/settings"
                 android:textSize="@dimen/main_screen_label_size"/>
@@ -142,9 +124,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingStart="60dp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="6dp">
+            android:paddingStart="60dp">
 
             <ImageButton
                 android:id="@+id/imageButton3"
@@ -156,10 +136,10 @@
                 android:visibility="visible"/>
 
             <TextView
-                android:id="@+id/textView66"
+                android:id="@+id/manualLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="fonts/Roboto-Light.ttf"
+                android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/manual"
                 android:textSize="@dimen/main_screen_label_size"/>
@@ -181,9 +161,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingStart="60dp"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="6dp">
+            android:paddingStart="60dp">
 
             <ImageButton
                 android:id="@+id/imageButton4"
@@ -195,10 +173,10 @@
                 android:visibility="visible"/>
 
             <TextView
-                android:id="@+id/textView96"
+                android:id="@+id/trainingLbl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="fonts/Roboto-Light.ttf"
+                android:fontFamily="@font/roboto_light"
                 android:paddingStart="50dp"
                 android:text="@string/training"
                 android:textSize="@dimen/main_screen_label_size"/>
@@ -208,8 +186,10 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/mainScreenBottomBar"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
         android:background="@color/colorBottomBar"
         android:gravity="center_vertical"
         android:orientation="vertical">
@@ -219,21 +199,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:fontFamily="fonts/Roboto-Light.ttf"
+            android:fontFamily="@font/roboto_light"
             android:text="@string/application_name"
             android:textColor="@android:color/background_light"
             android:textSize="16sp"/>
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/websiteLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
-            android:fontFamily="fonts/Roboto-Medium.ttf"
+            android:fontFamily="@font/roboto_normal_family"
             android:text="@string/vixiar_web"
             android:textColor="@android:color/background_light"
             android:textSize="16sp"/>
 
     </LinearLayout>
 
-</android.widget.LinearLayout>
+</RelativeLayout>
