--- a/app/src/main/res/layout/activity_stability.xml
+++ b/app/src/main/res/layout/activity_stability.xml
@@ -9,6 +9,7 @@
 
 
     <include
+        android:id="@+id/topBar"
         layout="@layout/top_bar_layout"
         android:layout_alignParentTop="true"/>
 
@@ -19,11 +20,10 @@
     </LinearLayout>
 
     <include
+        android:id="@+id/bottomBar"
         layout="@layout/bottom_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"/>
 
 </android.widget.RelativeLayout>
-
-
