--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="main_screen_label_size">24sp</dimen>
     <dimen name="main_screen_vertical_spacing">20dp</dimen>
     <dimen name="bottom_bar_font_size">24sp</dimen>
+    <dimen name="top_bar_title_font_size">20sp</dimen>
+    <dimen name="top_bar_button_font_size">16sp</dimen>
 </resources>
