--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,7 @@
 
     <include
         android:id="@+id/topBar"
-        layout="@layout/top_bar_layout"
-        android:layout_alignParentTop="true"/>
+        layout="@layout/top_bar_layout"/>
 
     <LinearLayout
         android:id="@+id/mainScreenTitleBar"
@@ -200,7 +199,6 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:fontFamily="@font/roboto_light"
-            android:text="@string/application_name"
             android:textColor="@android:color/background_light"
             android:textSize="16sp"/>
 
