--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -9,16 +9,28 @@
 
 
     <include
-        layout="@layout/top_bar_layout"
-        android:layout_alignParentTop="true"/>
+        android:id="@+id/topBar"
+        layout="@layout/top_bar_layout"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/bottomBar"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentTop="false"
+        android:layout_below="@+id/topBar"
+        android:layout_centerInParent="true"
         android:orientation="vertical">
+
+        <com.vixiar.indicor.PressureViewGraph
+            android:id="@+id/pressureGraph"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="30dp"/>
     </LinearLayout>
 
     <include
+        android:id="@+id/bottomBar"
         layout="@layout/bottom_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
