--- a/app/src/main/res/layout/activity_stability.xml
+++ b/app/src/main/res/layout/activity_stability.xml
@@ -10,8 +10,7 @@
 
     <include
         android:id="@+id/topBar"
-        layout="@layout/top_bar_layout"
-        android:layout_alignParentTop="true"/>
+        layout="@layout/top_bar_layout"/>
 
     <LinearLayout
         android:layout_width="match_parent"
