--- a/app/src/main/res/layout/top_bar_layout.xml
+++ b/app/src/main/res/layout/top_bar_layout.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:fontFamily="@font/roboto_light"
+            android:fontFamily="@font/roboto_light_family"
             android:paddingStart="20dp"
             android:text="Button"
             android:textColor="@color/colorTopBarText"
