--- a/app/src/main/res/layout/activity_stability.xml
+++ b/app/src/main/res/layout/activity_stability.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:foregroundGravity="bottom"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -15,14 +16,64 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/topBar"
         android:orientation="vertical">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_below="@+id/topBar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
+            android:indeterminateTint="@color/colorBottomBar"/>
+
+        <TextView
+            android:id="@+id/txtAcquiringSignal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical|center_horizontal"
+            android:text="@string/acquiring_signal"
+            android:textColor="@color/colorBottomBar"
+            android:textSize="@dimen/acquiring_signal_font_size"/>
+
+        <com.jjoe64.graphview.GraphView
+            android:id="@+id/PPGStabilityGraph"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="100dp"/>
+
+
     </LinearLayout>
 
-    <include
-        android:id="@+id/bottomBar"
-        layout="@layout/bottom_bar_layout"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"/>
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/colorBottomBar"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingBottom="15dp"
+        android:paddingEnd="15dp"
+        android:paddingStart="15dp"
+        android:paddingTop="15dp">
+
+        <TextView
+            android:id="@+id/txtMessage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_weight="5"
+            android:fontFamily="@font/roboto_light"
+            android:gravity="center_horizontal"
+            android:textColor="@android:color/background_light"
+            android:textSize="@dimen/bottom_bar_font_size"/>
+
+    </LinearLayout>
 
 </android.widget.RelativeLayout>
