--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,5 @@
     <dimen name="bottom_bar_font_size">24sp</dimen>
     <dimen name="top_bar_title_font_size">20sp</dimen>
     <dimen name="top_bar_button_font_size">16sp</dimen>
+    <dimen name="acquiring_signal_font_size">48sp</dimen>
 </resources>
