Working on the state logic for the testing activity.

--- a/app/src/main/res/layout/activity_testing_valsalva.xml
+++ b/app/src/main/res/layout/activity_testing_valsalva.xml
@@ -47,7 +47,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/timeRemaingImage"
+                    android:id="@+id/imgTimeRemaing"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
