--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorMainBackground"
     android:foregroundGravity="bottom"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -41,7 +42,6 @@
         android:layout_centerHorizontal="false"
         android:layout_centerInParent="true"
         android:layout_centerVertical="false"
-        android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
