--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
-    <color name="colorLightGray">#D3D3D3</color>
+    <color name="colorLightGray">#d3d3d3</color>
+    <color name="colorMainBackground">#f0f0f0</color>
     <color name="colorTopBar">#58595b</color>
     <color name="colorTopBarText">#f5f5f5</color>
     <color name="colorBottomBar">#33a6d4</color>
