First cut at the whole procedure working completely.

--- a/app/src/main/res/layout/activity_testing_results.xml
+++ b/app/src/main/res/layout/activity_testing_results.xml
@@ -233,7 +233,7 @@
             android:textSize="@dimen/bottom_bar_font_size"/>
 
         <TextView
-            android:id="@+id/txtMessage2"
+            android:id="@+id/txtMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
